--- a/src/Core/Messages.Transport/Core.Messages.Transport.csproj
+++ b/src/Core/Messages.Transport/Core.Messages.Transport.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Reactive" Version="4.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Messages\Core.Messages.csproj" />
   </ItemGroup>
 
